crates/parser/tests/snapshots/test_type_system__type_variable_values.snap
---
source: crates/parser/tests/test_type_system.rs
expression: file
---
SourceFile {
    sections: [
        Section {
            kind: "Pure",
            imports: [],
            elements: [
                Function(
                    FunctionDef {
                        package: Some(
                            Package {
                                name: "my",
                                parent: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 10,
                                    end_line: 2,
                                    end_column: 11,
                                },
                            },
                        ),
                        name: "test",
                        parameters: [
                            Parameter {
                                name: "r",
                                type_ref: Some(
                                    TypeReference {
                                        path: Package {
                                            name: "Res",
                                            parent: None,
                                            source_info: SourceInfo {
                                                source: "test.pure",
                                                start_line: 2,
                                                start_column: 22,
                                                end_line: 2,
                                                end_column: 24,
                                            },
                                        },
                                        type_arguments: [],
                                        type_variable_values: [
                                            Integer(
                                                1,
                                                SourceInfo {
                                                    source: "test.pure",
                                                    start_line: 2,
                                                    start_column: 26,
                                                    end_line: 2,
                                                    end_column: 26,
                                                },
                                            ),
                                        ],
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 2,
                                            start_column: 22,
                                            end_line: 2,
                                            end_column: 24,
                                        },
                                    },
                                ),
                                multiplicity: Some(
                                    PureOne,
                                ),
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 19,
                                    end_line: 2,
                                    end_column: 19,
                                },
                            },
                            Parameter {
                                name: "v",
                                type_ref: Some(
                                    TypeReference {
                                        path: Package {
                                            name: "VARCHAR",
                                            parent: None,
                                            source_info: SourceInfo {
                                                source: "test.pure",
                                                start_line: 2,
                                                start_column: 36,
                                                end_line: 2,
                                                end_column: 42,
                                            },
                                        },
                                        type_arguments: [],
                                        type_variable_values: [
                                            Integer(
                                                200,
                                                SourceInfo {
                                                    source: "test.pure",
                                                    start_line: 2,
                                                    start_column: 44,
                                                    end_line: 2,
                                                    end_column: 46,
                                                },
                                            ),
                                        ],
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 2,
                                            start_column: 36,
                                            end_line: 2,
                                            end_column: 42,
                                        },
                                    },
                                ),
                                multiplicity: Some(
                                    PureOne,
                                ),
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 33,
                                    end_line: 2,
                                    end_column: 33,
                                },
                            },
                        ],
                        return_type: TypeReference {
                            path: Package {
                                name: "Res",
                                parent: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 54,
                                    end_line: 2,
                                    end_column: 56,
                                },
                            },
                            type_arguments: [],
                            type_variable_values: [
                                Integer(
                                    1,
                                    SourceInfo {
                                        source: "test.pure",
                                        start_line: 2,
                                        start_column: 58,
                                        end_line: 2,
                                        end_column: 58,
                                    },
                                ),
                            ],
                            source_info: SourceInfo {
                                source: "test.pure",
                                start_line: 2,
                                start_column: 54,
                                end_line: 2,
                                end_column: 56,
                            },
                        },
                        return_multiplicity: PureOne,
                        body: [
                            Variable(
                                Variable {
                                    name: "r",
                                    source_info: SourceInfo {
                                        source: "test.pure",
                                        start_line: 4,
                                        start_column: 5,
                                        end_line: 4,
                                        end_column: 5,
                                    },
                                },
                            ),
                        ],
                        stereotypes: [],
                        tagged_values: [],
                        tests: [],
                        source_info: SourceInfo {
                            source: "test.pure",
                            start_line: 2,
                            start_column: 1,
                            end_line: 2,
                            end_column: 8,
                        },
                    },
                ),
            ],
            source_info: SourceInfo {
                source: "test.pure",
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 7,
            },
        },
    ],
    source_info: SourceInfo {
        source: "test.pure",
        start_line: 1,
        start_column: 1,
        end_line: 1,
        end_column: 7,
    },
}
